7lesson classwork complete

--- a/classwork/7lesson/avtorisation.html
+++ b/classwork/7lesson/avtorisation.html
@@ -31,7 +31,7 @@
             <input type="text" name="name" id="name" value="name" size="50" maxlength="50">
             <br>
             <label for="second_name">second name</label>
-            <input  type="text" name="second_name" id="second_name" value="second_name" size="50" maxlength="50">
+            <input type="text" name="second_name" id="second_name" value="second_name" size="50" maxlength="50">
             <br>
             <label for="third_name">third name</label>
             <input type="text" name="third_name" id="third_name" value="third_name" size="50" maxlength="50">
@@ -40,19 +40,43 @@
             <input type="radio" name="sex" value="man" id="man">
             <br>
             <label for="woman"> woman</label>
-            <input type="radio" name="sex" value="woman" id="woman" >
+            <input type="radio" name="sex" value="woman" id="woman">
             <br>
             <label for="name_course">Name Course</label>
             <select name="name_course" id="name_course">
-            <option value="c#_essentional">C# Essentional</option>
-                <option value="c#profesional"> C# Profeesional</option>
+                <option value="C#_Essential">C# Essentional</option>
+                <option value="C#_Professional"> C# Profeesional</option>
                 <option value="HTML" selected>HTML</option>
                 <option value="CSS">CSS</option>
                 <option value="JavaScript">JavaScript</option>
                 <option value="jQuery">jQuery</option>
-                <div></div>
             </select>
             <br>
+            <label for="C# Essential"> C# Essential</label>
+            <input type="checkbox" name="C# Essential" value="C# Essential" id="C# Essential">
+            <br>
+            <label for="C#_Professional"> C# Professional</label>
+            <input type="checkbox" name="C#_Professional" value="C#_Professional" id="C#_Professional">
+            <br>
+            <label for="HTML">HTML</label>
+            <input type="checkbox" name="HTML" value="HTML" id="HTML">
+            <br>
+            <label for="CSS">CSS</label>
+            <input type="checkbox" value="CSS" name="CSS" id="CSS">
+            <br>
+            <label for="JavaScript">JavaScript</label>
+            <input type="checkbox" value="JavaScript" name="JavaScript" id="JavaScript">
+            <br>
+            <label for="jQuery">jQuery</label>
+            <input type="checkbox" value="jQuery" name="jQuery" id="jQuery">
+            <br>
+            <label for="more_info">More info</label>
+            <textarea rows="4" cols="10" name="more_info" id="more_info" placeholder="write here">
+            </textarea>
+            <br>
+            <input type="reset" name="reset" value="reset">
+            <br>
+            <input type="submit" value="complete!">
         </form>
     </body>
 </html>
