--- a/classwork/7lesson/avtorisation.html
+++ b/classwork/7lesson/avtorisation.html
@@ -9,7 +9,7 @@
     <body>
         <form action="" method="post">
             <label for="login">Login</label>
-            <input type="text" name="login" placeholder="login" id="login">
+            <input type="TEXT" name="login" placeholder="login" id="login">
             <br>
             <label for="pass"> password</label>
             <input type="password" name="passwod" placeholder="password" id="pass">
@@ -28,13 +28,13 @@
         </form>
         <form action="" method="GET">
             <label for="name">name</label>
-            <input type="text" name="name" id="name" value="name" size="50" maxlength="50">
+            <input type="TEXT" name="name" id="name" value="name" size="50" maxlength="50">
             <br>
             <label for="second_name">second name</label>
-            <input type="text" name="second_name" id="second_name" value="second_name" size="50" maxlength="50">
+            <input type="TEXT" name="second_name" id="second_name" value="second_name" size="50" maxlength="50">
             <br>
             <label for="third_name">third name</label>
-            <input type="text" name="third_name" id="third_name" value="third_name" size="50" maxlength="50">
+            <input type="TEXT" name="third_name" id="third_name" value="third_name" size="50" maxlength="50">
             <br>
             <label for="man">man</label>
             <input type="radio" name="sex" value="man" id="man">
