--- a/homework/7lesson/form.html
+++ b/homework/7lesson/form.html
@@ -142,10 +142,18 @@
                     <li>
                         <label for="how">Яким чином ви дізналися про конкурс «Вчитель-новатор»? (на вибір, можна декілька варіантів)</label>
                         <select multiple name="how" id="how">
-                            <option value="web">Интернет</option>
-                            <option value="friend">Друзі розповіли</option>
-                            <option value="advertising">реклама</option>
+                            <option value="MOH">Сайт МОН молодьспорту</option>
+                            <option value="Microsoft">Сайт Майкрософт Україна</option>
+                            <option value="part_in_edu">Сайт Мережі «Партнерство в навчанні»</option>
+                            <option value="IPPO">Обласний ІППО</option>
+                            <option value="obluprosv">Обласне управління освіти</option>
+                            <option value="muo">Міське управління освіти</option>
+                            <option value="Osvita">Osvita.com</option>
+                            <option value="Gurt">Gurt.org.ua</option>
                         </select>
+                        <br>
+                        <label for="other">інше</label>
+                        <input type="TEXT" name="other" value="other" id="other">
                     </li>
                     <li>
                         <label for="feedback">Відгук</label>
@@ -153,6 +161,11 @@
                     </li>
                 </ol>
             </form>
+        </div>
+        <div>
+            <p>Я даю згоду на обробку моїх персональних даних і погоджуюся з Політикою конфіденційності (галочка обязательна)
+
+                Кнопки Подати анкету, Заповнити знову</p>
         </div>
     </body>
 </html>
