--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                     </li>
                     <li>meta and border radius
                         <ul>
-                            <li><a href="classwork/6lesson/meta_position.html">borderradius and meta </a> </li>
+                            <li><a href="classwork/6lesson/meta_position.html">borderradius and meta </a></li>
+                        </ul>
+                    </li>
+                    <li>Form
+                        <ul>
+                            <li><a href="classwork/7lesson/avtorisation.html">Form</a></li>
                         </ul>
                     </li>
              </ol>
@@ -62,10 +67,20 @@
                             <li><a href="homework/4lesson/div.html">div</a></li>
                         </ul>
                     </li>
+                    <li>Position/Site
+                        <ul>
+                            <li><a href="homework/6lesson/absolute.html">Position</a></li>
+                            <li><a href="homework/6lesson/site.html">site</a></li>
+                        </ul>
+                    </li>
+                    <li>Form
+                        <ul>
+                            <li><a href="homework/7lesson/form.html">Form</a></li>
+                        </ul>
+                    </li>
                 </ol>
             </li>
         </ol>
-        <a href="homework/6lesson/site.html">site</a>
         <a href="finalprojeсt/landing.html">final project</a>
     </body>
 </html>
