committ one finalclasswork

--- a/classwork/final/index.html
+++ b/classwork/final/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head >
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="css/main.css">
@@ -28,11 +28,17 @@
                         </nav>
                     </div>
                 </div>
-                <div class="headerimage">
-                    <img src="img/pic1.jpg" alt="mountains" title="mountains">
-                </div>
                 </div>
             </header>
+            <section class="section1">
+                <div class="container">
+                <div class="headerimage">
+                    <div class="imagetop">
+                        <img src="img/pic1.jpg" alt="mountains" title="mountains" class="mountains">
+                    </div>
+                </div>
+                </div>
+            </section>
             <section class="one">
                 <div class="container">
                 <div class="sectiononebox1">
@@ -42,13 +48,14 @@
                         </h1>
                         <p>Suspendisse pretium leo convallis. Viverra augue euismod sodales etiam volutpat.
                             Vulputate amet sapien quis placerat et vulputate. Lorem ipsum dolor sit amet.</p>
-                    </div>
+
                     <div class="section1box1element2">
                         <a href="#">Nulla diam vivamus</a>
                         <a href="#">Pretium mollis cubilia</a>
                         <a href="#">Auctor est fermentum</a>
                         <a href="#">Praesent est ullamcorper</a>
                         <a href="#">Volutpat et blandit</a>
+                    </div>
                     </div>
                 </div>
                 <div class="sectiononebox2">
@@ -99,5 +106,8 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>&copy; Your Site Name | Design by <a href="#"> FreeCSSTemplates.org</a></p>
+        </footer>
     </body>
 </html>
