committ one finalclasswork

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                             <li><a href="classwork/7lesson/avtorisation.html">Form</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <ul>last site page
+                            <li><a href="classwork/final/index.html">last site</a></li>
+                        </ul>
+                    </li>
              </ol>
             </li>
             <li>Home Work
