--- a/index.html
+++ b/index.html
@@ -88,4 +88,6 @@
         </ol>
         <a href="finalprojeсt/landing.html">final project</a>
     </body>
+    <img src="img/skype.jpg" alt="skype" title="Ciberbionic">
+    <img src="img/slack.jpg" alt="slack" title="else">
 </html>
