--- a/index.html
+++ b/index.html
@@ -90,4 +90,6 @@
     </body>
     <img src="img/skype.jpg" alt="skype" title="Ciberbionic">
     <img src="img/slack.jpg" alt="slack" title="else">
+
+    <a href="homework/resume.html">resume</a>
 </html>
