--- a/homework/resume.html
+++ b/homework/resume.html
@@ -1,96 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
     <head>
-        <meta charset="UTF-8">
-        <title>resume</title>
+        <meta charset="utf-8">
+        <meta lang="ua">
+        <title>CV</title>
         <link rel="stylesheet" href="main.css">
         <meta name="author" content="Vasilyev Evgenii">
-        <meta name="description" content="resume">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Source+Sans+Pro:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+        <meta name="description" content="CV">
     </head>
     <body>
-        <section class="main">
-            <section class="sectionLeft">
-                <img class="photo" src="img/photo.jpg" alt="photo">
-                <div class="info">
-                    <div class="sectionLeftContacts">
-                        <h3>
-                            Контакти
-                        </h3>
-                        <div class="sectionLeft_sectionLeftContacts-email">
-                            <img class="bgico" src="img/email.svg" alt="email" title="email">
-                            <div class="description">
-                                <a href="mailto:vasilye508@gmail.com"> vasilyev508@gmail.com</a>
-                            </div>
-                        </div>
-                        <div class="sectionLeft_sectionLeftContacts">
-                            <img class="bgico" src="img/tel.svg" alt="icoBackground">
-                            <div>
-                                <div class="description telephone">
-                                    <a href="tel:+380635863452"> 063 586 34 52</a>
-                                    <a href="tel:+380919722071"> 091 972 20 71</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sectionLeft_sectionLeftContacts-coord">
-                            <img  class="bgico" src="img/cords.svg" alt="cords" title="cords">
-                            <div class="description">
-                                <p>ул. Юрия Шевелова 49/20 кв. 21</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="sectionLeft_Skill">
-                        <h3>Знання</h3>
-                        <div class="skill">
-                            <p class="sectionLeft_Skill-html">html</p>
-                            <div class="progress">
-                                <div class="grayback1"></div>
-                                <div class="strips"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <p class="sectionLeft_Skill-html">css</p>
-                            <div class="progress">
-                                <div class="grayback2"></div>
-                                <div class="strips"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <p class="sectionLeft_Skill-html">JavaScript</p>
-                            <div class="progress">
-                                <div class="grayback3"></div>
-                                <div class="strips"></div>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <p class="sectionLeft_Skill-html">Git</p>
-                            <div class="progress">
-                                <div class="grayback4"></div>
-                                <div class="strips"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="sectionLeft_Soft">
-                        <h3>Программы</h3>
-                        <progress value="15" max="100"></progress>
-                        <p>Adobe Photoshop</p>
-                        <p>Adobe Illustrator</p>
-                        <p>Adobe Premier Pro</p>
-                        <p>Sublime Text</p>
-                    </div>
-                    <div class="sectionLeft_hobby">
-                        <h3>Хоббі</h3>
-                        <p>Плавання</p>
-                        <p>Малювання</p>
-                        <p>Катання на ковзанах</p>
-                        <p>Катання на веловсипеді</p>
-                        <p>Arduino</p>
-                    </div>
-                </div>
-            </section>
-            <section class="sectionright">
+        <header class="name">
+            <h1>Евгеній Васильєв</h1>
+            <h4>FrontEnd-Developer</h4>
+        </header>
+        <section class="columnLeft">
+            <img class="photo" src="img/photo.jpg" alt="photo">
+            <div class="info">
+                <aside>
+                    <h2>
+                        Info
+                    </h2>
+                </aside>
+                <p>name</p>
+                <p>tel</p>
+                <p>tel</p>
+                <p>email</p>
+                <p>coord</p>
+                <aside>
+                    <h2>
+                        skill
+                    </h2>
+                </aside>
+                <p>name</p>
+                <p>tel</p>
+                <p>tel</p>
+                <p>email</p>
+                <p>coord</p>
+                <aside>
+                    <h2>
+                        soft skill
+                    </h2>
+                </aside>
+                <p>name</p>
+                <p>tel</p>
+                <p>tel</p>
+                <p>email</p>
+                <p>coord</p>
+            </div>
 
-            </section>
+        </section>
+        <section class="columnRight">
+
         </section>
     </body>
 </html>
