--- a/5/product.html
+++ b/5/product.html
@@ -8,21 +8,22 @@
     <body>
         <header>Product</header>
         <main>
-            <div class="box1"></div>
-            <div class="box2">
+            <div class="box box1"></div>
+            <div class="box box2">
                 <b>Lorem ipsum</b>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, et ipsa iure molestias nihil non quas quo ut. Aliquam dolor ex fugit molestiae nesciunt nulla, quidem ratione reprehenderit veritatis voluptates!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad, aliquid architecto blanditiis commodi ducimus et, eveniet ex excepturi illo iusto minus nam nemo quod repellat tenetur velit voluptas.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt, distinctio doloribus et fuga fugit, iusto maiores maxime nesciunt nisi officia quas quasi, quia quidem sunt tempore vel veniam voluptatem?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, et ipsa iure molestias nihil non quas quo ut. Aliquam dolor ex fugit molestiae nesciunt nulla, quidem ratione reprehenderit veritatis voluptates!
+          fugit, iusto maiores maxime nesciunt nisi officia quas quasi, quia quidem sunt tempore vel veniam voluptatem?
                 dolor sit amet, consectetur adipisicing elit. Assumenda atque aut consectetur dolores ducimus eius fuga
                 id illo ipsam ipsum laborum libero molestiae nemo quis quisquam, sit soluta suscipit vel.</div>
-            <div class="box3">
-                <div class="box_inside"></div>
-                <div class="box_inside"></div>
-                <div class="box_inside"></div>
-                <div class="box_inside"></div>
+            <div class="box box3">
+                <div class="box_in_box">
+                    <div class="box_inside"></div>
+                    <div class="box_inside"></div>
+                    <div class="box_inside"></div>
+                    <div class="box_inside"></div>
+                </div>
             </div>
-            <div class="box4"></div>
+            <div class="box box4"></div>
         </main>
     </body>
 </html>
