--- a/5/final_page.html
+++ b/5/final_page.html
@@ -5,37 +5,50 @@
         <title>final_page</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="css/final_page.css">
+        <!--[if (IE 9)]>
+        <link rel="stylesheet" type="text/css" href="css/ie11.css" />
+        <![endif]-->
     </head>
     <body>
-        <div class="collum1">
-            <p>Список</p>
-            <ol>
-                <li> first
-                    <ul>
-                        <li>123</li>
-                        <li>123</li>
-                        <li>123</li>
-                    </ul>
-                </li>
-                <li>second
-                    <ul>
-                        <li>123</li>
-                        <li>123</li>
-                        <li>123</li>
-                    </ul>
-                </li>
-            </ol>
+        <main>
+            <div class="collum1">
+                <p>Список</p>
+                <ol>
+                    <li>First
+                    </li>
+                    <li>Second
+                        <ol class="rome">
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                        </ol>
+                    </li>
+                    <li>Third
+                        <ol class="rome">
+                            <li>123</li>
+                            <li>123</li>
+                            <li>123</li>
+                        </ol>
+                    </li>
+                </ol>
+
+            </div>
+
+            <div class="collum2">
+
+            </div>
+
+            <div class="collum3">
+            <a href="#" class="link1">Facebok</a>
+            <a href="#sdfasdf" class=" link2">Youtube</a>
+            <a href="#56" class="link3">Steam</a>
+            </div>
+        </main>
+
+        <div class="none">
 
         </div>
 
-        <div class="collum2">
 
-        </div>
-
-        <div class="collum3">
-        <a href="#" class="link1">Facebbok</a>
-        <a href="#sdfasdf" class=" link2">Youtube</a>
-        <a href="#56" class="link3">Steam</a>
-        </div>
     </body>
 </html>
