--- a/5/final_page.html
+++ b/5/final_page.html
@@ -40,13 +40,13 @@
 
             <div class="collum3">
             <a href="#" class="link1">Facebok</a>
-            <a href="#sdfasdf" class=" link2">Youtube</a>
-            <a href="#56" class="link3">Steam</a>
+            <a href="#" class=" link2">Youtube</a>
+            <a href="#" class="link3">Steam</a>
             </div>
         </main>
 
         <div class="none">
-
+        <p>чтоб ты в аду горел</p>
         </div>
 
 
