--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Hello world</h1>
+        <a href="mywork/final/index.html">text</a>
+        <a href="mywork/finalprojeсt/landing.html">text</a>
     </body>
 </html>
